--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@hexlet/code",
+  "type": "module",
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/Slevin0087/frontend-project-46/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/Slevin0087/frontend-project-46/actions)",
   "main": "index.js",
@@ -7,5 +8,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "commander": "^11.1.0",
+    "fs": "^0.0.1-security"
+  },
+  "bin": {
+    "gendiff": "bin/gendiff.js"
+  }
 }
