--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,8 +1,10 @@
 env:
+  jest: true
   browser: true
   es2021: true
 extends: airbnb-base
 parserOptions:
   ecmaVersion: latest
   sourceType: module
-rules: {}
+rules:
+  no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }]
