--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/Slevin0087/frontend-project-46/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/Slevin0087/frontend-project-46/actions)",
-  "main": "index.js",
+  "main": "src/index.js",
   "simple-git-hooks": {
     "pre-push": "make lint"
   },
